--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XYZ Management Web Server</title>
+    <title>Aara User Management Web Server</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
