The Meta data has been Updated

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aara User Management Web Server</title>
+    <meta name="description"
+        content="Aara will Handle User Authentication for you Apps and Store It In Our MongoDb Database" />
     <link rel="stylesheet" href="style.css">
 </head>
 
